// Copyright (c) 2021 Huawei Device Co., Ltd.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option java_package = "ohos.devtools.datasources.transport.grpc.service";

message TracePluginConfig {
  repeated string ftrace_events = 1;
  repeated string bytrace_categories = 2;
  repeated string bytrace_apps = 3;
  uint32 buffer_size_kb = 4;  /*cpu buffer_size*/
  uint32 trace_period_ms = 5;
  bool symbolize_ksyms = 6;  /*Enables symbol /proc/kallsyms.*/
  string clock = 7;
  ExtractSchedConfig extract_sched = 8;
  repeated string debug_outfile_name = 9; /*1: file 2:binary file*/
  bool debug_enable = 10;
  string debug_fifo_path = 11;
}

message ExtractSchedConfig {
    bool enabled = 1;
}
